--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,6 +121,12 @@
   }
 }
 
+.absolute {
+  top: 10px;
+  right: 0;
+  z-index: 50; /* Fa sì che l'elemento sia visibile sopra gli altri */
+}
+
  
 .overflow-y-auto {
   scrollbar-width: thin; /* Per Firefox */
